--- a/Dio_HTML.html
+++ b/Dio_HTML.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+  .ul li{
+    font-family: Comic Sans MS; color: white;
+  }
+</style>
 <title>Portofolio</title>
 </head>
 <body style="background-color: #168A5D">
