--- a/Dio_HTML.html
+++ b/Dio_HTML.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-  .ul li{
+  .diodamar {
     font-family: Comic Sans MS; color: white;
   }
 </style>
@@ -12,10 +12,12 @@
 <h2 style="font-family: Comic Sans MS; color: white;">Profilku</h2>
 <p style="font-family: Comic Sans MS; color: white;">Nama saya Dio Damar Danendra (2301858805) atau biasa dipanggil Dio. Saya merupakan calon programmer dan HTML programmer. <br>
 Berikut ini merupakan bahasa pemrograman atau coding yang saya kuasai:</p>
+<div class="diodamar">
 <ul>
   <li>C</li>
   <li>HTML</li>
 </ul>
+</div>
 <p style="font-family: Comic Sans MS; color: white;">Saya merupakan mahasiswa BINUS University jurusan Computer Science. Saya telah menyelesaikan Skripsi saya pada tahun 2024. 
 Sekarang ini, saya <br>sedang mempersiapkan diri untuk wisuda.</p>
 </body>
