--- a/Dio_HTML.html
+++ b/Dio_HTML.html
@@ -12,7 +12,7 @@
 <h2 style="font-family: Comic Sans MS; color: white;">Profilku</h2>
 <p style="font-family: Comic Sans MS; color: white;">Nama saya Dio Damar Danendra (2301858805) atau biasa dipanggil Dio. Saya merupakan calon programmer dan HTML programmer. <br>
 Berikut ini merupakan bahasa pemrograman atau coding yang saya kuasai:</p>
-<ul>
+<ul style="font-family: Comic Sans MS; color: white;">
   <li>C</li>
   <li>HTML</li>
 </ul>
