--- a/Dio_HTML.html
+++ b/Dio_HTML.html
@@ -8,7 +8,7 @@
 <head>
 <title>Portofolio</title>
 </head>
-<body style="background-color: #168A5D">
+<body style="background-color: #168A5D;">
 <h2 style="font-family: Comic Sans MS; color: white;">Profilku</h2>
 <p style="font-family: Comic Sans MS; color: white;">Nama saya Dio Damar Danendra (2301858805) atau biasa dipanggil Dio. Saya merupakan calon programmer dan HTML programmer. <br>
 Berikut ini merupakan bahasa pemrograman atau coding yang saya kuasai:</p>
