--- a/Dio_HTML.html
+++ b/Dio_HTML.html
@@ -15,6 +15,7 @@ Berikut ini merupakan bahasa pemrograman atau coding yang saya kuasai:</p>
 <ul style="font-family: Comic Sans MS; color: white;">
   <li>C</li>
   <li>HTML</li>
+  <li>CSS</li>
 </ul>
 <p style="font-family: Comic Sans MS; color: white;">Saya merupakan mahasiswa BINUS University jurusan Computer Science. Saya telah menyelesaikan Skripsi saya pada tahun 2024. 
 Sekarang ini, saya <br>sedang mempersiapkan diri untuk wisuda.</p>
